made adjustments for requirements 4/5

--- a/ClassSubmissionAssignment285/ClassSubmissionAssignment285/ClassSubmissionAssignment285.csproj
+++ b/ClassSubmissionAssignment285/ClassSubmissionAssignment285/ClassSubmissionAssignment285.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class2.cs" />
     <Compile Include="Classy.cs" />
     <Compile Include="Classy2.cs" />
     <Compile Include="Program.cs" />
